# phoenix

./: .gitignore  Cargo.toml  README.md
c_progs/: demo  demo.c
roms/: bitwise  bne.rom  moveusp
src/: args.rs  constants.rs  lib.rs  main.rs  types.rs  util.rs
src/vm/: README.md  cpu.rs  ea.rs  isa.rs  mmu.rs  mod.rs
src/vm/isa/: add.rs  andi.rs  bit.rs  branch.rs  cmp.rs  div.rs  eori.rs  io.rs  mathq.rs  mod.rs  move.rs  movem.rs  mul.rs  ori.rs  rot.rs  sub.rs  util.rs  zero.rs
tests/: suite.rs
tui/: Cargo.toml
tui/src/: main.rs  memview.rs  stackview.rs
