[package]
name = "phoenix"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "tui"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
simplelog = "0"
clap = {version = "4", features = ["derive"]}
log = "0"
dbg_hex = "0"

[dev_dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
datatest-stable = "0.2"

[[test]]
name = "suite"
harness = false